--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.25.0
+streamlit
 pymongo
 pymupdf
 google-generativeai
@@ -11,4 +11,3 @@ python-magic
 PyArabic
 pydub
 python-docx
-streamlit-extras
